--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
 	
 	<properties>
 		<vertx.version>4.1.2</vertx.version>
+		<maven.compiler.release>11</maven.compiler.release>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 	</properties>
 
 	<dependencies>
@@ -24,5 +27,12 @@
 			<version>${vertx.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-core</artifactId>
+			<version>2.2</version>
+		<scope>test</scope>
+</dependency>
+
 	</dependencies>
 </project>
